--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.9.0",
+    "react-share": "^4.1.0",
     "styled-components": "^5.0.1",
     "typescript": "^3.8.3",
     "use-query-params": "^0.6.0"
